# HearMEout

./: .gitignore  CMakeLists.txt  HearMEout.jucer  README.md
Assetes/: BinaryData.h
Builds/VisualStudio2022/: HearMEout.sln  HearMEout_App.vcxproj  HearMEout_App.vcxproj.filters  resources.rc
ClassDigram/: HearMeOut v1.0 _ Mermaid Chart.html  HearMeOut v1.1 _ Mermaid Chart.html  HearMeOut v1.1.mmd
ClassDigram/HearMeOut v1.0 _ Mermaid Chart_files/: 0.DHz0pwsD.css
ClassDigram/HearMeOut v1.1 _ Mermaid Chart_files/: gtm.js.download  js
JuceLibraryCode/: JuceHeader.h
Source/: JuceUtilitesManager.cpp  JuceUtilitesManager.h  LICENSE  Main.cpp  MainComponent.cpp  MainComponent.h  PlayerAudio.cpp  PlayerAudio.h  PlayerGUI.cpp  PlayerGUI.h  README.md  REFACTORING.md  SessionManager.cpp  SessionManager.h
